--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+table {
+  width: 100%;
+}
+
+table td {
+  padding: 10px
+}
+
+table td .card {
+  width: 100%;
+  height: 60px;
+  color: #000;
+  cursor: pointer;
+}
+
+main {
+  padding: 60px 10px;
+  max-width: 1000px;
+  margin: auto;
+}
