--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<div class="col-md-12">
+  <h1>Login</h1>
+  <div class="alert alert-danger" *ngIf="errorMessage">{{errorMessage}}</div>
+  <form [formGroup]="userForm" (ngSubmit)="onSubmitForm()">
+    <div class="form-group">
+      <label for="email">Email</label>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text ">
+            <span class="fa fa-at"></span>
+          </span>
+        </div>
+        <input type="text" id="email" class="form-control" formControlName="email"
+          [ngClass]="{ 'is-invalid': userForm.controls.email.invalid, 'is-valid' : userForm.controls.email.valid }">
+        <div class="invalid-feedback" *ngIf="userForm.controls.email.errors">
+          <div *ngIf="userForm.controls.email.errors?.required">Email is required</div>
+          <div *ngIf="userForm.controls.email.errors?.email">Invalid format</div>
+          <div *ngIf="userForm.controls.email.errors?.minlength">Email should have at least 6 characters</div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text ">
+            <span class="fa fa-lock"></span>
+          </span>
+        </div>
+        <input type="password" id="password" class="form-control" formControlName="password"
+          [ngClass]="{ 'is-invalid': userForm.controls.password.invalid, 'is-valid' : userForm.controls.password.valid }">
+        <div class="invalid-feedback" *ngIf="userForm.controls.password.errors">
+          <div *ngIf="userForm.controls.password.errors?.required">Password is required</div>
+          <div *ngIf="userForm.controls.password.errors?.minlength">Password should have at least 5 characters</div>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">Login</button>
+  </form>
+</div>
